# haskell-roman-numerals

./: Main.hs  roman-numerals.cabal  stack.yaml
src/: RomanNumerals.hs
test/: RomanNumeralsSpec.hs  Spec.hs
