name:                roman-numerals
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
author:              Joe Lea
maintainer:          joeleapublic@gmail.com
build-type:          Simple
cabal-version:       >=1.10


library
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends:       base >=4.8 && <4.9
                     , hspec
                     , QuickCheck
  hs-source-dirs:      src, test
  default-language:    Haskell2010
